@@ -145,6 +145,7 @@
 		<script type="text/javascript" src="js/loc/treecity/treecity.js"></script>
 		
 		<script type="text/javascript" src="js/loc/plains.js"></script>
+		<script type="text/javascript" src="js/loc/nomads.js"></script>
 		<script type="text/javascript" src="js/loc/highlands.js"></script>
 		<script type="text/javascript" src="js/loc/dragonden.js"></script>
 		<script type="text/javascript" src="js/loc/forest.js"></script>
