@@ -26,95 +26,6 @@ world.loc.Plains = {
 
 
 //
-// Nomads
-//
-world.SaveSpots["NomadsTent"] = world.loc.Plains.Nomads.Tent;
-world.loc.Plains.Nomads.Tent.SaveSpot = "NomadsTent";
-world.loc.Plains.Nomads.Tent.safe = function() { return true; };
-world.loc.Plains.Nomads.Tent.description = function() {
-	var light;
-	if     (world.time.hour >= 6 && world.time.hour < 19) light = "sunlight";
-	else if(world.time.hour >= 19 || world.time.hour < 2) light = "firelight";
-	else light = "moonlight";
-	
-	Text.Add("The interior of the tent is dim, with little of the [light] reaching inside. Various pots, pans and other cooking utensils are packed away in an open wooden chest, should you want to prepare some food. There is little actual furniture besides that; a few rugs rolled out to protect bared feet and a set of bed rolls are free for you to use.", {light: light});
-	Text.NL();
-}
-
-world.loc.Plains.Nomads.Tent.links.push(new Link(
-	"Outside", true, true,
-	function() {
-		var light;
-		if     (world.time.hour >= 6 && world.time.hour < 19) light = "sunlight";
-		else if(world.time.hour >= 19 || world.time.hour < 2) light = "firelight";
-		else light = "moonlight";
-		
-		Text.Add("Outside, the [light] illuminates several other tents that are similar to the one you are in now. ", {light: light});
-	},
-	function() {
-		MoveToLocation(world.loc.Plains.Nomads.Fireplace, {minute: 5});
-	}
-));
-
-
-world.loc.Plains.Nomads.Fireplace.description = function() {
-	Text.Add("The nomad camp is currently set up in the middle of a wide grassland spreading out in all directions. [TreeFar] In the middle of the gathering of disparate tents that make up the nomad camp - about twenty in total - is a large fire pit.", {TreeFar: world.TreeFarDesc()});
-	Text.NL();
-	if(world.time.hour >= 7 && world.time.hour < 19)
-		Text.Add("Currently it is unlit. Not many people are around, most likely seeing to their daily chores.");
-	else if(world.time.hour >= 19 || world.time.hour < 2)
-		Text.Add("A roaring fire reaches toward the dark skies, sparks swirling around in the breeze. Most of the adult population in the camp has gathered by the fireplace for the night's festivities.");
-	else
-		Text.Add("The smoldering ashes from last night's fire still glow faintly. Most of the camp is sleeping at the current hour.");
-	Text.NL();
-}
-world.loc.Plains.Nomads.Fireplace.links.push(new Link(
-	"Crossroads", true, true,
-	function() {
-		Text.Add("A faint trail leads out across the plains toward a low outcropping where several larger paths cross. ");
-	},
-	function() {
-		MoveToLocation(world.loc.Plains.Crossroads, {minute: 15});
-	}
-));
-world.loc.Plains.Nomads.Fireplace.links.push(new Link(
-	"Tent", true, true,
-	function() {
-		Text.Add("Your own tent is nearby, should you need rest.");
-		Text.NL();
-	},
-	function() {
-		MoveToLocation(world.loc.Plains.Nomads.Tent, {minute: 5});
-	}
-));
-world.loc.Plains.Nomads.Fireplace.switchSpot = function() {
-	return gameCache.flags["Portals"] == 0;
-}
-
-
-/* // TODO TEMP EFFECT TEST
-world.loc.Plains.Nomads.Fireplace.events.push(new Link(
-	"Preggo", true, true,
-	function() {
-		Text.Add(Text.BoldColor("PLACEHOLDER: Get preggo!"));
-		Text.NL();
-		Text.Flush();
-	},
-	function() {
-		Text.Clear();
-		
-		Text.Add(Text.BoldColor("PLACEHOLDER TEXT. Got preggo. Mother = Unknown"));
-		Text.NL();
-		Text.Flush();
-		
-		player.effects.push(new Effect(EffectFuncCodes.PregnancyRegular, {day: 1}, {mother: "unknown"}));
-		Gui.NextPrompt();
-	}
-));
-*/
-
-
-//
 // Crossroads
 //
 world.loc.Plains.Crossroads.description = function() {
