@@ -8,6 +8,10 @@ CHANGELOG for Fall of Eden
 Version 0.3w
 ------------
 * Vena restoration added. You need to find the scepter and bring it to Ophelia. If you've already defeated Lagon, the scene should still trigger.
+* Added several Save locations:
+ - Outlaws camp
+ - Dryad's glade
+ - Jeanne's tower
 
 --------------------------------------------
              PREVIOUS VERSIONS
